@@ -1,6 +1,10 @@
 devel
 -----
 
+* Put Sync/LatestID into hotbackup and restore it on hotbackup restore
+  if it is in the backup. This helps with unique key generation after
+  a hotbackup is restored to a young cluster.
+
 * Fixed a bug in the index count optimization that doubled counted documents
   when using array expansions in the fields definition.
   
